--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,6 +2,7 @@
   "extends": ["eslint:recommended", "prettier"],
   "plugins": ["prettier"],
   "env": {
-    "node": true
+    "node": true,
+    "es6": true
   }
 }
