--- a/.prettierrc
+++ b/.prettierrc
@@ -1,10 +1,10 @@
 {
-  "singleQuote": true,
-  "useTabs": false,
-  "tabWidth": 2,
-  "trailingComma": "all",
   "bracketSpacing": false,
   "printWidth": 100,
-  "semi": true
+  "semi": true,
+  "singleQuote": true,
+  "tabWidth": 2,
+  "trailingComma": "es5",
+  "useTabs": false
 }
 
