ci(travis): set deploy branch

--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,8 @@ jobs:
       deploy:
         provider: npm
         api_key: $NPM_API_KEY
-        on: deploy-npm-release
+        on:
+          branch: master
 branches:
   except:
     - /^v\d+\.\d+\.\d+$/
