--- a/.travis.yml
+++ b/.travis.yml
@@ -16,10 +16,10 @@ jobs:
       node_js: '10'
       script: echo "Deploying to npm ..."
       deploy:
-        provider: npm
-        api_key: $NPM_API_KEY
-        on:
-          branch: master
+        provider: script
+        skip_cleanup: true
+        script:
+          - npx semantic-release
 branches:
   except:
     - /^v\d+\.\d+\.\d+$/
