fix(travis): replace and fix cp command with mv

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,8 +12,7 @@ jobs:
   include:
     - stage: test
       script: npm test
-    - stage: copy
-      script: cp src/handle-request.js handle-request.js
+      script: mv src/handle-result.js handle-result.js
     - stage: npm release
       node_js: '10'
       script: echo "Deploying to npm ..."
